--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>网易微专业证书</title>
+	<title>双十一页面</title>
 </head>
 <body>
-	<img src="double11.jpg" alt="双十一">
+	<img src="双十一全场50% off.jpg.jpg" alt="双十一">
 </body>
 </html>
