--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>双十一页面</title>
 </head>
 <body>
-	<img src="双十一全场50% off.jpg.jpg" alt="双十一">
+	<img src="双十一全场50% off.jpg" alt="双十一">
 </body>
 </html>
